ajout section contact

--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@
     </div>
   </section>
 
+  <!-- PARTICIPEZ À L'AVENTURE -->
+  <section class="w-full max-w-xl mx-auto my-20 px-4 reveal-on-scroll">
+    <div class="glass-dark rounded-3xl p-10 flex flex-col items-center text-center">
+      <div class="text-4xl mb-3 text-yellow-400">✉️</div>
+      <h2 class="text-2xl font-title font-bold text-yellow-400 mb-4">Participez à l'aventure VersetVie</h2>
+      <p class="mb-4 text-gray-200">Une idée, un bug, une suggestion ? Votre retour est précieux pour faire grandir l'application !<br>Écrivez-nous pour partager vos idées ou signaler un problème.</p>
+      <a href="mailto:contact@versetvie.fr" class="bg-yellow-400 hover:bg-yellow-500 text-gray-900 px-8 py-3 rounded-full text-lg font-semibold shadow-lg transition">Écrire à l'équipe</a>
+    </div>
+  </section>
 
   <!-- FOOTER -->
   <footer class="w-full flex flex-col items-center py-10 bg-transparent text-gray-400 text-center mt-auto">
