adapté logo krisskool by code

--- a/index.html
+++ b/index.html
@@ -259,9 +259,15 @@
       <a href="mailto:contact@versetvie.fr" class="hover:underline">Contact</a>
     </div>
     <p class="mb-1">Une application créée par</p>
-    <a href="https://krisskoolbycode.fr" target="_blank" rel="noopener" class="inline-block transition-transform hover:scale-105 mb-3">
-      <img src="assets/krisskoolbycode.jpeg" alt="krisskool by code" class="h-32 w-auto rounded-xl shadow-lg border-2 border-yellow-400 mx-auto" />
-    </a>
+    <div class="flex justify-center mb-3">
+      <a href="https://krisskoolbycode.fr" target="_blank" rel="noopener" class="transition-transform hover:scale-105">
+        <div class="w-[300px] h-[150px] overflow-hidden rounded-xl">
+          <img src="assets/krisskoolbycode.jpeg" 
+               alt="krisskool by code"
+               class="w-full h-full object-cover object-center" />
+        </div>
+      </a>
+    </div>
     <p class="mb-2">&copy; 2025 VersetVie. Tous droits réservés.</p>
     <p class="text-sm text-gray-600">Site designé avec amour et foi ✨</p>
   </footer>
