--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <div class="glass-dark rounded-2xl p-10 flex flex-col items-center text-center transition-transform hover:scale-105">
         <div class="text-5xl mb-3 text-yellow-400">💬</div>
         <h3 class="text-xl font-title font-bold text-yellow-400 mb-2">Encouragement</h3>
-        <p class="text-gray-200">Une message positif pour t'accompagner et te motiver chaque jour une fois le verset découvert.</p>
+        <p class="text-gray-200">Un message positif pour t'accompagner et te motiver chaque jour une fois le verset découvert.</p>
       </div>
       <div class="glass-dark rounded-2xl p-10 flex flex-col items-center text-center transition-transform hover:scale-105">
         <div class="text-5xl mb-3 text-yellow-400">⭐</div>
