--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,93 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact – VersetVie</title>
   <link rel="stylesheet" href="https://cdn.tailwindcss.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <style>
+    html {
+      color: #22223b;
+      transition: background 0.3s, color 0.3s;
+    }
+    body {
+      background: linear-gradient(135deg, #fffbe8 0%, #f7fafc 100%);
+      transition: background 0.3s, color 0.3s;
+      font-family: 'Inter', sans-serif;
+    }
+    .dark {
+      background: #18181b;
+      color: #f3f4f6;
+    }
+    .dark body {
+      background: linear-gradient(135deg, #18181b 0%, #27272a 100%);
+      color: #f3f4f6;
+    }
+    .font-title { font-family: 'Playfair Display', serif; }
+    .mode-switch {
+      position: fixed; top: 1.5rem; right: 1.5rem; z-index: 50;
+      background: rgba(255,255,255,0.85); color: #22223b; border-radius: 9999px;
+      box-shadow: 0 2px 8px 0 rgba(0,0,0,0.08); padding: 0.5rem 1.1rem; font-size: 1.1rem; font-weight: 600; cursor: pointer; border: none; outline: none; transition: background 0.3s, color 0.3s; display: flex; align-items: center; gap: 0.5rem;
+    }
+    .dark .mode-switch { background: rgba(36,36,40,0.9); color: #facc15; box-shadow: 0 2px 8px 0 rgba(0,0,0,0.18); }
+  </style>
 </head>
-<body class="bg-gray-50 min-h-screen flex flex-col items-center justify-center px-4">
-  <main class="bg-white rounded-xl shadow-lg p-8 max-w-2xl w-full mt-10 text-center">
-    <h1 class="text-3xl font-bold mb-6 text-yellow-700">Contact</h1>
-    <p class="mb-4">Une question, une suggestion ou un encouragement&nbsp;?</p>
-    <p class="mb-4">Écrivez-nous à&nbsp;:</p>
-    <p class="mb-6"><a href="mailto:contact@versetvie.app" class="text-yellow-700 underline text-lg">contact@versetvie.app</a></p>
-    <p class="text-gray-500 text-sm">Votre adresse ne sera utilisée que pour répondre à votre message.</p>
+<body class="min-h-screen flex flex-col items-center justify-center px-4">
+  <button class="mode-switch" id="modeSwitch" aria-label="Changer le mode clair/sombre">
+    <span id="modeSwitchIcon">🌙</span>
+    <span id="modeSwitchText">Mode clair</span>
+  </button>
+  <main class="bg-white rounded-xl shadow-lg p-8 max-w-2xl w-full mt-10 text-center dark:bg-gray-900 dark:shadow-2xl">
+    <h1 class="text-3xl font-bold mb-6 text-yellow-700 dark:text-yellow-400">Contact</h1>
+    <p class="mb-6">Une question, une suggestion ou un encouragement&nbsp;? Remplis ce formulaire, nous te répondrons rapidement.</p>
+    <form id="contactForm" action="https://formsubmit.co/krisskoolbycode@etik.com" method="POST" class="flex flex-col gap-4 text-left">
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="contact.html?sent=1">
+      <label class="font-semibold" for="name">Nom</label>
+      <input type="text" id="name" name="name" required class="rounded-lg border border-gray-300 dark:border-gray-700 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-yellow-400 bg-white dark:bg-gray-800 dark:text-gray-100" autocomplete="name">
+      <label class="font-semibold" for="email">Email</label>
+      <input type="email" id="email" name="email" required class="rounded-lg border border-gray-300 dark:border-gray-700 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-yellow-400 bg-white dark:bg-gray-800 dark:text-gray-100" autocomplete="email">
+      <label class="font-semibold" for="message">Message</label>
+      <textarea id="message" name="message" rows="5" required class="rounded-lg border border-gray-300 dark:border-gray-700 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-yellow-400 bg-white dark:bg-gray-800 dark:text-gray-100"></textarea>
+      <button type="submit" class="mt-4 bg-yellow-400 hover:bg-yellow-500 text-gray-900 font-semibold px-8 py-3 rounded-full shadow-lg transition">Envoyer</button>
+    </form>
+    <p id="formSuccess" class="hidden mt-6 text-green-600 dark:text-green-400 font-semibold">Merci pour ton message ! Nous te répondrons rapidement.</p>
+    <script>
+      // Affiche le message de confirmation si ?sent=1 dans l'URL
+      if (window.location.search.includes('sent=1')) {
+        document.getElementById('formSuccess').classList.remove('hidden');
+      }
+    </script>
+    <p class="text-gray-500 text-sm mt-6">Ton adresse ne sera utilisée que pour répondre à ton message. Aucune donnée n'est stockée sur ce site.</p>
   </main>
+  <script>
+    // Light/Dark mode switcher
+    const html = document.documentElement;
+    const modeSwitch = document.getElementById('modeSwitch');
+    const modeSwitchIcon = document.getElementById('modeSwitchIcon');
+    const modeSwitchText = document.getElementById('modeSwitchText');
+    function setMode(mode) {
+      if (mode === 'dark') {
+        html.classList.add('dark');
+        modeSwitchIcon.textContent = '☀️';
+        modeSwitchText.textContent = 'Mode sombre';
+        localStorage.setItem('theme', 'dark');
+      } else {
+        html.classList.remove('dark');
+        modeSwitchIcon.textContent = '🌙';
+        modeSwitchText.textContent = 'Mode clair';
+        localStorage.setItem('theme', 'light');
+      }
+    }
+    // Init mode
+    const userPref = localStorage.getItem('theme');
+    if (userPref) {
+      setMode(userPref);
+    } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      setMode('dark');
+    } else {
+      setMode('light');
+    }
+    modeSwitch.addEventListener('click', () => {
+      setMode(html.classList.contains('dark') ? 'light' : 'dark');
+    });
+  </script>
 </body>
 </html> 
