--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -8,11 +8,38 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body { font-family: 'Inter', sans-serif; }
+    html {
+      color: #22223b;
+      transition: background 0.3s, color 0.3s;
+    }
+    body {
+      background: linear-gradient(135deg, #fffbe8 0%, #f7fafc 100%);
+      transition: background 0.3s, color 0.3s;
+    }
+    .dark {
+      background: #18181b;
+      color: #f3f4f6;
+    }
+    .dark body {
+      background: linear-gradient(135deg, #18181b 0%, #27272a 100%);
+      color: #f3f4f6;
+    }
     .font-title { font-family: 'Playfair Display', serif; }
+    .card-text { color: #22223b; transition: color 0.3s; }
+    .dark .card-text { color: #e5e7eb; }
+    .mode-switch {
+      position: fixed; top: 1.5rem; right: 1.5rem; z-index: 50;
+      background: rgba(255,255,255,0.85); color: #22223b; border-radius: 9999px;
+      box-shadow: 0 2px 8px 0 rgba(0,0,0,0.08); padding: 0.5rem 1.1rem; font-size: 1.1rem; font-weight: 600; cursor: pointer; border: none; outline: none; transition: background 0.3s, color 0.3s; display: flex; align-items: center; gap: 0.5rem;
+    }
+    .dark .mode-switch { background: rgba(36,36,40,0.9); color: #facc15; box-shadow: 0 2px 8px 0 rgba(0,0,0,0.18); }
   </style>
 </head>
-<body class="relative min-h-screen flex flex-col items-center justify-center bg-gradient-to-b from-yellow-50 via-white to-yellow-100 px-4">
+<body class="relative min-h-screen flex flex-col items-center justify-center px-4">
+  <button class="mode-switch" id="modeSwitch" aria-label="Changer le mode clair/sombre">
+    <span id="modeSwitchIcon">🌙</span>
+    <span id="modeSwitchText">Mode clair</span>
+  </button>
   <header class="w-full flex flex-col items-center pt-10 pb-4">
     <img src="assets/icon-versetvie.png" alt="Icône VersetVie" class="w-16 h-16 rounded-2xl shadow-lg mb-2 border-4 border-white" />
     <span class="text-2xl font-title font-bold text-yellow-700 tracking-wide drop-shadow">VersetVie</span>
@@ -30,5 +57,37 @@
     <p class="text-sm text-gray-500 mt-8">Dernière mise à jour : juin 2024</p>
     <a href="index.html" class="mt-8 text-yellow-700 underline hover:text-yellow-600 transition">← Retour à l'accueil</a>
   </main>
+  <script>
+    // Light/Dark mode switcher
+    const html = document.documentElement;
+    const modeSwitch = document.getElementById('modeSwitch');
+    const modeSwitchIcon = document.getElementById('modeSwitchIcon');
+    const modeSwitchText = document.getElementById('modeSwitchText');
+    function setMode(mode) {
+      if (mode === 'dark') {
+        html.classList.add('dark');
+        modeSwitchIcon.textContent = '☀️';
+        modeSwitchText.textContent = 'Mode sombre';
+        localStorage.setItem('theme', 'dark');
+      } else {
+        html.classList.remove('dark');
+        modeSwitchIcon.textContent = '🌙';
+        modeSwitchText.textContent = 'Mode clair';
+        localStorage.setItem('theme', 'light');
+      }
+    }
+    // Init mode
+    const userPref = localStorage.getItem('theme');
+    if (userPref) {
+      setMode(userPref);
+    } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      setMode('dark');
+    } else {
+      setMode('light');
+    }
+    modeSwitch.addEventListener('click', () => {
+      setMode(html.classList.contains('dark') ? 'light' : 'dark');
+    });
+  </script>
 </body>
 </html> 
